# thesis_playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: lio_sam.yaml  params.yaml
cuda/: CMakeLists.txt
cuda/src/: hello_world.cpp  hello_world.cu  hello_world.h  helpers.cu  helpers.cuh  knn.cu  sumMatrix_1d.cu  sumMatrix_2dgrid_1dblock.cu  sum_arrays.c  sum_arrays.cu
cuda/src/chapter02/: CMakeLists.txt  checkDeviceInformation.cu  checkDimension.cu  checkThreadIndex.cu  defineGridBlock.cu  sumMatrix-1D.cu  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU-2D-grid-2D-block-int.cu  sumMatrixOnGPU-2D-grid-2D-block.cu  sumMatrixOnGPU-timer-2index.cu  sumMatrixOnGPU-timer.cu
cuda/src/chapter03/: CMakeLists.txt  nestedHelloWorld.cu  nestedReduce.cu  reduceInteger.cu  reduceMin.cu  simpleDivergence.cu  sumMatrix.cu
cuda/src/chapter04/: CMakeLists.txt  globalVariable.cu  globalVariableAndArray.cu  readSegmentUnroll.cu  simpleMathAoS.cu  transpose.cu
fastsense_map/: CMakeLists.txt
fastsense_map/src/: global_map.cpp  local_map.cpp  local_map.h  test.cpp
fastsense_map/src/1d/: global_map.h  local_map.h  test.cpp  voxel_map.h
fastsense_map/src/mashup/: global_map.h  local_map.h  sparse_map.h  sparse_sub_map.h  test.cpp
fastsense_map/src/subvoxelmap/: map.h  subvoxelmap.h  util.h  voxelmap.h
fastsense_map/src/util/: constants.h  point.h  tsdf.h  tsdf_hw.h
include/: ouster.h
include/pcl_hline_reducer/: parameters.h
include/utils/: ouster.h
include/utils/pcl_hline_reducer/: parameters.h
include/utils/pizza_filter/: parameters.h
launch/: pcl_hline_reducer.launch  phidgets_ouster.launch  phidgets_ouster_debug.launch  pizza_filter.launch
loam/: lm.py
registration/: CMakeLists.txt
registration/data/: carpark_cloud_velodyne_hdl_32e.pcd  ply2pcd.py
registration/registration/: CMakeLists.txt
registration/registration/data/: carpark_cloud_velodyne_hdl_32e.ply  triangle_d1000.pcd
registration/registration/scripts/: ransac.py
registration/registration/src/: dca.cpp  dca.h  dca_pcd.cpp  dca_registration.cpp  dca_registration_artificial.cpp  ply.h  umeyama.cpp  util.cpp  util.h  viewer.cpp  viewer.h
registration/ros/src/utils/: CMakeLists.txt  package.xml
registration/ros/src/utils/src/: pcl2pcd.cpp
registration/src/: dca.cpp  dca.h  dca_pcd.cpp  dca_registration.cpp  dsa.cpp  dsa.h  pcl_normals.cpp  ply.cpp  run_dsa.cpp  test.cpp  umeyama.cpp  util.cpp  util.h  viewer.cpp  viewer.h
src/: pizza_filter.cpp
src/pcl_hline_reducer/: pcl_hline_reducer.cpp
subvoxelmap/: CMakeLists.txt  package.xml
subvoxelmap/config/: params.yaml  subvoxelmap.rviz  tsdf.rviz
subvoxelmap/include/: map.h  parameters.h  subvoxelmap.h  tsdf.h  util.h
subvoxelmap/launch/: subvoxelmap.launch
subvoxelmap/src/: main.cpp  map.h  rviz_test.cpp  subvoxelmap.h  test.cpp  tsdf_rviz.cpp  util.h
utils/: package.xml
utils/config/: params.yaml
utils/include/utils/pizza_filter/: parameters.h
utils/launch/: lio_sam.launch
utils/src/: pcl_hline_reducer.cpp  pizza_filter.cpp
