<?xml version="1.0"?>
<package format="2">
  <name>utils</name>
  <version>0.0.0</version>
  <description>The utils package</description>
  <maintainer email="julian@todo.todo">julian</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <build_depend>ouster_ros</build_depend>
  <exec_depend>ouster_ros</exec_depend>
  <build_depend>phidgets_imu</build_depend>
  <exec_depend>phidgets_imu</exec_depend>
</package>
