add_executable(globalVariable globalVariable.cu)
add_executable(memTransfer memTransfer.cu)
add_executable(sumArrayZerocpy sumArrayZerocpy.cu)
add_executable(sumArrayZerocpyUVA sumArrayZerocpyUVA.cu)
add_executable(readSegment readSegment.cu)
add_executable(writeSegment writeSegment.cu)
add_executable(simpleMathAoS simpleMathAoS.cu)
add_executable(simpleMathSoA simpleMathSoA.cu)
add_executable(readSegmentUnroll readSegmentUnroll.cu)

set_target_properties(globalVariable PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(memTransfer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(sumArrayZerocpy PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(sumArrayZerocpyUVA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(readSegment PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(writeSegment PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(simpleMathAoS PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(simpleMathSoA PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(readSegmentUnroll PROPERTIES CUDA_SEPARABLE_COMPILATION ON)